// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Linkify > should linkify .cloud tld with linkifyTlds option 1`] = `
<p>
  <a href="http://yandex.cloud">
    yandex.cloud
  </a>
</p>
`;

exports[`Linkify > should not linkify .cloud tld without linkifyTlds option 1`] = `
<p>
  yandex.cloud
</p>
`;
